# zkps-from-scratch

./: .gitignore  README.md  pyproject.toml
tests/: __init__.py  test_algebra.py  test_bulletproofs.py  test_constraints.py  test_kzg.py  test_plonk.py  test_trivial_pcs.py
tests/algebra/: test_cyclic_group.py  test_polynomial.py
tests/polynomial_commitment_schemes/: test_bulletproofs.py  test_kzg.py  test_trivial_pcs.py
zkps/: algebra.py  compiler.py  constraints.py  main.py  metrics.py  plonk.py  preprocessor.py  transcript.py  utils.py
zkps/algebra/: algorithms.py  cyclic_group.py  field.py  pairing.py  polynomial.py
zkps/polynomial_commitment_schemes/: bulletproofs.py  kzg.py  pcs.py  trivial.py
